Changement du HTML

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Demain mais pas après</title>
   </head>
   <body>
+  	<h1> Aujourd'hui c'est midi à 14h </h1>
   
   </body>
 </html>
